argocd/app-manifests/argocd-repo-server-egress-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-repo-server-egress-allow-external
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - { protocol: TCP, port: 443 }   # Git/HTTPS
    - { protocol: TCP, port: 80 }    # 일부 http repo
    - { protocol: UDP, port: 53 }    # DNS
    - { protocol: TCP, port: 53 }    # DNS(TCP fallback)
